# SourceMate-App

./: .gitignore  README.md  SPLIT_WINDOW_EXAMPLES.md  SPLIT_WINDOW_FEATURE.md  biome.json  bun.lockb  deno.jsonc  main.js  main.ts  package.json  svelte.config.js  tailwind.config.ts  types.ts  ui.ts  utils.ts
.github/workflows/: Release.yml  Test.yml  deno.yml  publish.yaml
SourceMate/: bun.lockb  package.json
SourceMate/src-tauri/: Cargo.toml  tauri.conf.json
SourceMate/src/lib/scripts/: utils.ts
SourceMate/src/routes/: +page.svelte
SourceMate/src/routes/source/: +page.svelte  +page.ts
src/: app.css  app.d.ts  app.html  error.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: constants.ts
src/lib/components/: BackButton.svelte  InputField.svelte  SplitWindowButton.svelte
src/lib/scripts/: sourceSchema.ts  tauri.ts  types.ts  utils.ts
src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte
src/routes/auth/login/: +page.svelte
src/routes/docs/word/: +page.svelte
src/routes/landingpage/: +page.svelte
src/routes/mylandingpage/: +page.svelte
src/routes/source/: +page.svelte  +page.ts
word-cli-frontend/: bun.lockb  package.json  svelte.config.js
word-cli-frontend/src/routes/: +page.svelte
~/.tauri/: myapp.key  myapp.key.pub
